# tinkle

./: CMakeLists.txt
UnityProject/Assets/Plugins/tinkle/: Tinkle.asmdef  TinkleNative.cs
UnityProject/Assets/Scenes/: SampleScene.unity
UnityProject/ProjectSettings/: ProjectSettings.asset
src/: plugin.cpp
